# LivePodium

./: .env  README.md  behzad.txt  behzad.txt.pub  db.sqlite3  main.py  pyproject.toml  requirements.tx  requirements.txt  test2.txt  test2.txt.pub
core/: settings.py  urls.py
events/: admin.py  models.py  views.py
events/migrations/: 0001_initial.py
templates/: base.html  event_detail.html  home.html  order_success.html
templates/emails/: ticket_confirmation.html
templates/registration/: login.html  register.html
templates/tickets/: my_tickets.html
tickets/: models.py  views.py
tickets/migrations/: 0001_initial.py  0002_remove_ticket_event_remove_ticket_mollie_payment_id_and_more.py
users/: views.py
